--- a/static/src/css/kabupaten_map_widget.css
+++ b/static/src/css/kabupaten_map_widget.css
@@ -1,6 +1,6 @@
 .leaflet-container {
     width: 100% !important;
-    height: 400px !important;
+    height: 500px !important;
     border-radius: 8px;
     z-index: 1;
 }
